Updated post and readme